--- a/src/pages/Movies/movies.css
+++ b/src/pages/Movies/movies.css
@@ -50,15 +50,65 @@
   cursor: pointer;
 }
 .moviesCards {
+  width: calc(100% - 258.4px);
   display: flex;
   flex-wrap: wrap;
   gap: 30px;
 }
 .card {
   overflow: hidden;
+  position: relative;
   border-radius: 10px;
-  width: 150px;
+  border: 1px solid #e3e3e3;
+  width: 180px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
 }
 .card img {
   width: 100%;
+}
+.card h1 {
+  font-size: 16px;
+  cursor: pointer;
+}
+.card h1:hover{
+  color: #01B4E4;
+}
+.card .cardBody {
+  position: relative;
+
+  padding: 26px 10px 12px;
+}
+.card p {
+  font-size: 16px;
+  color: rgba(0, 0, 0, 0.6);
+}
+.cardBody span {
+  display: block;
+  position: absolute;
+  background-color: #081c22;
+  color: white;
+  text-align: center;
+  top: -19px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  left: 10px;
+  width: 34px;
+  height: 34px;
+  padding: 2px;
+  font-weight: 700;
+}
+.moreIcon{
+  position: absolute;
+  cursor: pointer;
+  border-radius: 50%;
+  width: 25px;
+  right: 5px;
+  top: 5px;
+  background-color: #d6d6d68e;
+  height: 25px;
+}
+span sup {
+  color: white;
 }
